--- a/03_JS/index.html
+++ b/03_JS/index.html
@@ -10,4 +10,5 @@
 </body>
 <script src="first.js"></script>
 <script src="02_multiple_number.js"></script>
+<script src="03_loops.js"></script>
 </html>
