--- a/03_JS/index.html
+++ b/03_JS/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Hello</h2>
 </body>
 <script src="first.js"></script>
 <script src="02_multiple_number.js"></script>
 <script src="03_loops.js"></script>
+<script src="04_DOM.js"></script>
 </html>
