adding through JS

--- a/03_JS/index.html
+++ b/03_JS/index.html
@@ -12,4 +12,5 @@
 <script src="02_multiple_number.js"></script>
 <script src="03_loops.js"></script>
 <script src="04_DOM.js"></script>
+<script src="05_adding_through_JS.js"></script>
 </html>
