--- a/TicTacToe_Game/index.html
+++ b/TicTacToe_Game/index.html
@@ -7,7 +7,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="msg-container hide">
+        <p id="msg">Winner</p>
+        <button id="new-btn">New Game</button>
+    </div>
+    <main>
+        <h1>Tic Tac Toe</h1>
+        <div class="container">
+        <div class="game">
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+        </div>
+        </div>
+        <button id="reset-btn">Reset Game</button>
+    </main>
 </body>
 <script src="script.js"></script>
 </html>
