--- a/01_HTML/06_audio_video.html
+++ b/01_HTML/06_audio_video.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video and Audio Media</title>
+    <title>Video and Audio</title>
 </head>
 <body>
     <video src="#" width="20" autoplay loop muted controls poster="image/ray-so-export.png"></video>
