--- a/Currency_Converter/index.html
+++ b/Currency_Converter/index.html
@@ -42,6 +42,7 @@
         <button>Get Exchange Rate</button>
       </form>
     </div>
+    <script src="code.js"></script>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
