--- a/03_JS/DOM/index.html
+++ b/03_JS/DOM/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello , World!</h1>
+    <div id="bulb">
 
-    <script src="01_DOM.js"></script>
+    </div>
+    <button id="toggle">Toggle Bulb</button>
+
+    <script src="02_DOM.js"></script>
 </body>
 </html>
